--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,14 @@
             <artifactId>deep-qa</artifactId>
             <version>1.2</version>
         </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.5.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
