--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,15 @@
             <artifactId>spire.pdf.free</artifactId>
             <version>2.6.3</version>
         </dependency>
+
+        <!-- 系统监控 -->
+        <dependency>
+            <groupId>org.fusesource</groupId>
+            <artifactId>sigar</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+
+
     </dependencies>
     <repositories>
         <repository>
