--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,18 @@
             <version>1.6.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.10</version>
+        </dependency>
 
+
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.0</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
